--- a/3-reinforcement_learning/3A-reinforcement_learning/tutorial_3A_RL-solutions.ipynb
+++ b/3-reinforcement_learning/3A-reinforcement_learning/tutorial_3A_RL-solutions.ipynb
@@ -410,8 +410,8 @@
    "outputs": [],
    "source": [
     "# % Define a range of parameter values to loop over for each parameter.\n",
-    "alphas = np.linspace(0.02, 1, 20)\n",
-    "betas  = np.array([1, 2, 5, 10, 20])"
+    "alphas = np.linspace(0.02, 1, 4)  # learning rate (start with 4 values increase to 20 if everything works)\n",
+    "betas  = np.array([1, 2, 5, 10, 4])  # inverse temperature (start with 4 values increase to 20 if everything works)"
    ]
   },
   {
@@ -746,7 +746,7 @@
     "CM = np.zeros([3,3])\n",
     "\n",
     "# Let's loop over number of repetitions\n",
-    "Ncounts = 100    # start with 10, increase to 100 if everything works\n",
+    "Ncounts = 10    # start with 10, increase to 100 if everything works\n",
     "\n",
     "for n in range(Ncounts):\n",
     "    \n",
