add intermediate instructions

--- a/3-reinforcement_learning/tutorial_3B_RL-solutions.ipynb
+++ b/3-reinforcement_learning/tutorial_3B_RL-solutions.ipynb
@@ -322,6 +322,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The random agent does not care about the environment and choses an action from the available ones."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
@@ -382,7 +390,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "You see there random agent does not do great, but its performance will be a good baseline for us to evaluate the learning of the rest of the agents."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### SARSA Agent"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The state-action-reward-state-action (SARSA) agent uses an on-line policy to learn the best policy. The SARSA algorithm works by maintaining a table of action-value estimates Q(s, a) (the q_table), where s is the state and a is the action taken by the agent in that state. "
    ]
   },
   {
@@ -401,15 +425,20 @@
     "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))\n",
     "    # INSTRUCTION 6: return the agent's action.\n",
     "    def get_action(self, state):\n",
+    "        # INSTRUCTION 6.1: implement epsilon-greedy policy\n",
     "        if state is None or np.random.rand() < self.epsilon:  # Explore: select a random action\n",
     "            return np.random.choice(self.action_space)\n",
     "        else:                                # Exploit: select the action with max value (greedy policy)\n",
     "            return np.argmax(self.q_table[state[0], state[1]])\n",
     "    # INSTRUCTION 7: learn from experience\n",
     "    def learn(self, state, action, reward, next_state):\n",
+    "        # INSTRUCTION 7.1: get old value from the q-table\n",
     "        old_value = self.q_table[state[0], state[1], action]\n",
+    "        # INSTRUCTION 7.2: get action from the q-table\n",
     "        next_action = self.get_action(next_state)\n",
+    "        # INSTRUCTION 7.3: get the maximum value from the q-table for the next state and action\n",
     "        next_max = self.q_table[next_state[0], next_state[1], next_action]\n",
+    "        # INSTRUCTION 7.4: update the q-table\n",
     "        new_value = (1 - self.alpha) * old_value + self.alpha * (reward + self.gamma * next_max)\n",
     "        self.q_table[state[0], state[1], action] = new_value\n",
     "    def get_q_table(self):\n",
@@ -476,6 +505,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Q-learning agent uses an off-line policy to learn about the environment. As the SARSA algorithm, it works by maintaining a table of action-value estimates Q(s, a). The difference between the two is in the way they update the q-table. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 79,
    "metadata": {
@@ -503,14 +540,18 @@
     "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))\n",
     "    # INSTRUCTION 8: return the agent's action.\n",
     "    def get_action(self, state):\n",
+    "        # INSTRUCTION 8.1: implement epsilon-greedy policy\n",
     "        if state is None or np.random.rand() < self.epsilon:  # Explore: select a random action\n",
     "            return np.random.choice(self.action_space)\n",
     "        else:                                # Exploit: select the action with max value (greedy policy)\n",
     "            return np.argmax(self.q_table[state[0], state[1]])\n",
     "    # INSTRUCTION 9: learn from experience\n",
     "    def learn(self, state, action, reward, next_state):\n",
+    "        # INSTRUCTION 9.1: get old value from the q-table\n",
     "        old_value = self.q_table[state[0], state[1], action]\n",
+    "        # INSTRUCTION 9.2: get the maximum value from the q-table for the next state and action. This is different from SARSA!\n",
     "        next_max = np.max(self.q_table[next_state[0], next_state[1]])\n",
+    "        # INSTRUCTION 9.3: update the q-table\n",
     "        new_value = (1 - self.alpha) * old_value + self.alpha * (reward + self.gamma * next_max)\n",
     "        self.q_table[state[0], state[1], action] = new_value\n",
     "    def get_q_table(self):\n",
@@ -612,16 +653,19 @@
     "            return np.argmax(self.q_table[state[0], state[1]])\n",
     "    # INSTRUCTION 11: learn from experience\n",
     "    def learn(self, state, action, reward, next_state):\n",
-    "        # Increment eligibility trace for visited state and decay all traces\n",
-    "        self.eligibility_trace *= self.gamma * self.lambda_\n",
-    "        self.eligibility_trace[state[0], state[1]] += 1\n",
+    "        # INSTRUCTION 11.1: get old value from the q-table\n",
     "        old_value = self.q_table[state[0], state[1], action]\n",
+    "        # INSTRUCTION 11.2: update eligibility trace\n",
+    "        self.eligibility_trace *= self.gamma * self.lambda_\n",
+    "        # INSTRUCTION 11.3: update eligibility trace for the current state and action\n",
+    "        self.eligibility_trace[state[0], state[1]] += 1\n",
+    "        # INSTRUCTION 11.4: get the maximum value from the q-table for the next state and action        \n",
     "        next_max = np.max(self.q_table[next_state[0], next_state[1]])\n",
     "\n",
-    "        # Compute temporal difference error\n",
+    "        # INSTRUCTION 11.5: calculate the temporal difference delta\n",
     "        delta = reward + self.gamma * next_max - old_value\n",
     "\n",
-    "        # Update Q-value using eligibility trace\n",
+    "        # INSRTUCTION 11.6: Update Q-value using eligibility trace\n",
     "        self.q_table[state[0], state[1], action] += self.alpha * delta * self.eligibility_trace[state[0], state[1]]\n",
     "    def get_q_table(self):\n",
     "        return self.q_table\n"
