code to plot performance, psycho curves and RTs

--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions_reviewed_Heike.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions_reviewed_Heike.ipynb
@@ -443,6 +443,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To teach the network to perform the task, we will use a supervised learning approach. This means that we will provide the network with the inputs and the target outputs (or labels) and we will train the network to predict the target outputs from the inputs. For that we need a loss function that quantifies the difference between the network's predictions and the target outputs. Here's a screenshot of this morning presentation for you to remember how we train a network using gradient descent on a loss function. \n",
+    "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"https://drive.google.com/uc?export=view&id=1cJjCcgc3jgdrsd2nq0AsDq628nK0eUZA\" alt=\"drawing\" width=\"1000\"/>\n",
+    "</p>\n",
+    "\n",
+    "We will use the cross-entropy loss function, which is commonly used for classification tasks (here the network has to classify the stimuli into two categories). The cross-entropy loss function is defined as:\n",
+    "\n",
+    "$$L = - \\sum_{i=1}^{N} y_i \\log(\\hat{y}_i)$$\n",
+    "\n",
+    "where L is the loss, $N$ is the number of samples, $y_i$ is the target output and $\\hat{y}_i$ is the network's prediction for the $i$-th sample.\n",
+    "\n",
+    "We will also define the optimizer that will be used to train the network. We will use the Adam optimizer, which is a popular optimizer that is based on the gradient descent algorithm."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
