changed dataset path to github

--- a/1-modeling_101/tutorial_1A.ipynb
+++ b/1-modeling_101/tutorial_1A.ipynb
@@ -144,8 +144,8 @@
     }
    ],
    "source": [
-    "# load the data\n",
-    "df_exp = pd.read_csv('dataset_tutorial1.csv')\n",
+    "# load the data (change to local path if you're working locally)\n",
+    "df_exp = pd.read_csv(\"https://raw.githubusercontent.com/bambschool/BAMB2023/main/1-modeling_101/dataset_tutorial1.csv?token=GHSAT0AAAAAACFH2I2TUEKMMHZMREHILHOUZFXCWCA\")\n",
     "df_exp.head()"
    ]
   },
