--- a/2-drift_diffusion_models/bamb_tutorial2_ddm.ipynb
+++ b/2-drift_diffusion_models/bamb_tutorial2_ddm.ipynb
@@ -597,7 +597,7 @@
     "    name = # FILL TIHS IN\n",
     "    required_parameters = # FILL THIS IN\n",
     "    required_conditions = # FILL THIS IN\n",
-    "    def get_IC(self, t, x, dx, conditions):\n",
+    "    def get_IC(self, x, dx, conditions):\n",
     "        # FILL THIS IN\n",
     "\n",
     "# FILL THIS IN\n",
