--- a/2-drift_diffusion_models/bamb_tutorial2_ddm_solutions.ipynb
+++ b/2-drift_diffusion_models/bamb_tutorial2_ddm_solutions.ipynb
@@ -674,7 +674,7 @@
     "    name = \"A starting point with a left or right bias.\"\n",
     "    required_parameters = [\"x0\"]\n",
     "    required_conditions = [\"trgchoice\"]\n",
-    "    def get_IC(self, t, x, dx, conditions):\n",
+    "    def get_IC(self, x, dx, conditions):\n",
     "        start = np.round(self.x0/dx)\n",
     "        # Positive bias for choices to side 1, negative for side 2\n",
     "        if conditions['trgchoice'] == 2:\n",
