add pause in render, install gym

--- a/3-reinforcement_learning/tutorial_3B_RL-solutions.ipynb
+++ b/3-reinforcement_learning/tutorial_3B_RL-solutions.ipynb
@@ -38,7 +38,17 @@
       "source": [
         "Import the necessary libraries and define the functions we will use to plot the results.\n",
         "\n",
-        "JUST RUN THE CELL BELOW."
+        "JUST RUN THE CELLS BELOW."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Uncomment following lines to install\n",
+        "! pip install gym   # Install gym"
       ]
     },
     {
@@ -53,6 +63,7 @@
         "from gym import spaces\n",
         "import matplotlib.pyplot as plt\n",
         "from IPython.display import display, clear_output\n",
+        "import time\n",
         "\n",
         "def plot_reward_per_episode(reward_per_episode, ax=None):\n",
         "    \"\"\"Plot the reward per episode\"\"\"\n",
@@ -443,9 +454,11 @@
         "            print(f\"Trial: {env.trial + 1}, Step: {env.t + 1}, State: {state}, Action: {action}, Next State: {next_state},\\\n",
         "                    Reward: {reward}, Total Reward: {total_reward}, New trial: {info['new_trial']}\")\n",
         "        if render_flag:\n",
+        "            # render and wait 0.1 seconds\n",
         "            clear_output(wait=True)\n",
         "            env.render()\n",
         "            plt.show()\n",
+        "            time.sleep(0.1)\n",
         "        total_reward += reward\n",
         "        if info['new_trial']: # check if the trial has ended\n",
         "            reward_per_episode.append(total_reward)\n",
