make initial q-values smaller

--- a/3-reinforcement_learning/tutorial_3B_RL-solutions.ipynb
+++ b/3-reinforcement_learning/tutorial_3B_RL-solutions.ipynb
@@ -596,7 +596,7 @@
         "        self.alpha = alpha\n",
         "        self.gamma = gamma\n",
         "        self.epsilon = epsilon\n",
-        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))\n",
+        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))*0.1\n",
         "\n",
         "    # INSTRUCTION 3: return the agent's action.\n",
         "    def get_action(self, state):\n",
@@ -892,7 +892,7 @@
         "        self.alpha = alpha\n",
         "        self.gamma = gamma\n",
         "        self.epsilon = epsilon\n",
-        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))\n",
+        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))*0.1\n",
         "\n",
         "    # INSTRUCTION 6: return the agent's action.\n",
         "    def get_action(self, state):\n",
@@ -1029,7 +1029,7 @@
         "        self.alpha = alpha\n",
         "        self.gamma = gamma\n",
         "        self.epsilon = epsilon\n",
-        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))\n",
+        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))*0.1\n",
         "    def get_action(self, state):\n",
         "        # Implement epsilon-greedy policy\n",
         "        if state is None or np.random.rand() < self.epsilon:  # Explore: select a random action\n",
@@ -1171,7 +1171,7 @@
         "        self.gamma = gamma\n",
         "        self.epsilon = epsilon\n",
         "        self.lambda_ = lambda_\n",
-        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))\n",
+        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))*0.1\n",
         "        self.eligibility_trace = np.zeros((self.state_space[0], self.state_space[1]))\n",
         "    def get_action(self, state):\n",
         "        if state is None or np.random.rand() < self.epsilon:  # Explore: select a random action\n",
