--- a/3-reinforcement_learning/tutorial_3B_RL-instructions.ipynb
+++ b/3-reinforcement_learning/tutorial_3B_RL-instructions.ipynb
@@ -43,9 +43,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: gym in /home/manuel/anaconda3/lib/python3.7/site-packages (0.17.1)\n",
+            "Requirement already satisfied: pyglet<=1.5.0,>=1.4.0 in /home/manuel/anaconda3/lib/python3.7/site-packages (from gym) (1.5.0)\n",
+            "Requirement already satisfied: numpy>=1.10.4 in /home/manuel/anaconda3/lib/python3.7/site-packages (from gym) (1.18.1)\n",
+            "Requirement already satisfied: scipy in /home/manuel/anaconda3/lib/python3.7/site-packages (from gym) (1.4.1)\n",
+            "Requirement already satisfied: cloudpickle<1.4.0,>=1.2.0 in /home/manuel/anaconda3/lib/python3.7/site-packages (from gym) (1.3.0)\n",
+            "Requirement already satisfied: six in /home/manuel/anaconda3/lib/python3.7/site-packages (from gym) (1.14.0)\n",
+            "Requirement already satisfied: future in /home/manuel/anaconda3/lib/python3.7/site-packages (from pyglet<=1.5.0,>=1.4.0->gym) (0.18.2)\n"
+          ]
+        }
+      ],
       "source": [
         "# Uncomment following lines to install\n",
         "! pip install gym   # Install gym"
@@ -613,7 +627,7 @@
         "        self.alpha = alpha\n",
         "        self.gamma = gamma\n",
         "        self.epsilon = epsilon\n",
-        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))\n",
+        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))*0.1\n",
         "\n",
         "    # INSTRUCTION 3: return the agent's action.\n",
         "    def get_action(self, state):\n",
@@ -987,7 +1001,7 @@
         "        self.alpha = alpha\n",
         "        self.gamma = gamma\n",
         "        self.epsilon = epsilon\n",
-        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))\n",
+        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))*0.1\n",
         "    def get_action(self, state):\n",
         "        # Implement epsilon-greedy policy\n",
         "        if state is None or np.random.rand() < self.epsilon:  # Explore: select a random action\n",
@@ -1128,7 +1142,7 @@
         "        self.gamma = gamma\n",
         "        self.epsilon = epsilon\n",
         "        self.lambda_ = lambda_\n",
-        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))\n",
+        "        self.q_table = np.random.rand(self.state_space[0], self.state_space[1], len(self.action_space))*0.1\n",
         "        self.eligibility_trace = np.zeros((self.state_space[0], self.state_space[1]))\n",
         "    def get_action(self, state):\n",
         "        if state is None or np.random.rand() < self.epsilon:  # Explore: select a random action\n",
