add temperature, beta, to softmax SARSA

--- a/3-reinforcement_learning/tutorial_3B_RL-instructions.ipynb
+++ b/3-reinforcement_learning/tutorial_3B_RL-instructions.ipynb
@@ -876,7 +876,7 @@
       "source": [
         "#### 4.3. Implement a softmax SARSA agent\n",
         "\n",
-        "We will now implement a softmax agent, which will choose the actions using a softmax function.\n",
+        "We will now implement a softmax agent, which will choose the actions using a softmax function with temperature beta.\n",
         "\n",
         "COPY AND PASTE THE CODE FROM THE PREVIOUS CELL BELOW AND MODIFY IT."
       ]
