--- a/3-reinforcement_learning/tutorial_3B_RL-solutions.ipynb
+++ b/3-reinforcement_learning/tutorial_3B_RL-solutions.ipynb
@@ -471,10 +471,10 @@
         "        # the reward obtained and the new state after the action.\n",
         "        if learn_flag:\n",
         "            agent.learn(state=state, action=action, reward=reward, next_state=next_state)\n",
-        "        state = next_state\n",
         "        if verbose and env.trial % 100 == 0 and env.t == 0:\n",
         "            print(f\"Trial: {env.trial + 1}, Step: {env.t + 1}, State: {state}, Action: {action}, Next State: {next_state},\\\n",
         "                    Reward: {reward}, Total Reward: {total_reward}, New trial: {info['new_trial']}\")\n",
+        "        state = next_state\n",
         "        if render_flag:\n",
         "            # render and wait 0.1 seconds\n",
         "            clear_output(wait=True)\n",
@@ -628,9 +628,9 @@
         "    def learn(self, state, action, reward, next_state):\n",
         "        # INSTRUCTION 4.1: get old value from the q-table\n",
         "        old_value = self.q_table[state[0], state[1], action]\n",
-        "        # INSTRUCTION 4.2: get action from the q-table\n",
+        "        # INSTRUCTION 4.2: get action\n",
         "        next_action = self.get_action(next_state)\n",
-        "        # INSTRUCTION 4.3: get the maximum value from the q-table for the next state and action\n",
+        "        # INSTRUCTION 4.3: get the value from the q-table for the next state and action\n",
         "        next_max = self.q_table[next_state[0], next_state[1], next_action]\n",
         "        # INSTRUCTION 4.4: update the q-table\n",
         "        new_value = (1 - self.alpha) * old_value + self.alpha * (reward + self.gamma * next_max)\n",
@@ -698,7 +698,8 @@
         "      train_agent(agent=agent, grid_size=grid_size, starts=starts, goal=goal,\n",
         "                  obstacles=obstacles, max_num_tr=max_num_tr,\n",
         "                  verbose=verbose, max_steps_per_trial=max_steps_per_trial)\n",
-        "# plot_reward_per_episode(reward_per_episode_sarsa) you can plot the reward per episode if you want, but it will not be very informative since the agent is not learning\n",
+        "# plot_reward_per_episode(reward_per_episode_sarsa) # you can plot the reward per episode if you want, \n",
+        "# but it will not be very informative since the agent is not using its knowledge to act\n",
         "plot_q_table(agent, action_space)"
       ]
     },
@@ -751,7 +752,7 @@
         "        old_value = self.q_table[state[0], state[1], action]\n",
         "        # get action from the q-table\n",
         "        next_action = self.get_action(next_state)\n",
-        "        # get the maximum value from the q-table for the next state and action\n",
+        "        # get the value from q-table for the next state and action\n",
         "        next_max = self.q_table[next_state[0], next_state[1], next_action]\n",
         "        # update the q-table\n",
         "        new_value = (1 - self.alpha) * old_value + self.alpha * (reward + self.gamma * next_max)\n",
@@ -918,7 +919,6 @@
         "\n",
         "    # INSTRUCTION 6: return the agent's action.\n",
         "    def get_action(self, state):\n",
-        "        \n",
         "        # INSTRUCTION 6.1: implement an softmax policy\n",
         "        action_prob = np.exp(self.beta*self.q_table[state[0], state[1]]) / np.sum(np.exp(self.beta*self.q_table[state[0], state[1]]))\n",
         "        return np.random.choice(self.action_space, p=action_prob)\n",
@@ -927,7 +927,7 @@
         "        old_value = self.q_table[state[0], state[1], action]\n",
         "        # get action from the q-table\n",
         "        next_action = self.get_action(next_state)\n",
-        "        # get the maximum value from the q-table for the next state and action\n",
+        "        # get the value from the q-table for the next state and action\n",
         "        next_max = self.q_table[next_state[0], next_state[1], next_action]\n",
         "        # update the q-table\n",
         "        new_value = (1 - self.alpha) * old_value + self.alpha * (reward + self.gamma * next_max)\n",
