change font.family to avoid colab warnings

--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -123,6 +123,7 @@
     "\n",
     "# packages to visualize data\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
     "\n",
     "# import torch and neural network modules to build RNNs\n",
     "import torch\n",
@@ -429,6 +430,7 @@
    ],
    "source": [
     "# INSTRUCTION 0. Play with the task (run it several times, try random and constant agents) to see how it works.\n",
+    "mpl.rcParams['font.family'] = ['DejaVu Serif']\n",
     "num_steps = 40\n",
     "inputs = []\n",
     "actions = []\n",
@@ -974,6 +976,7 @@
    ],
    "source": [
     "# plot the probability of choosing right as a function of the signed coherence and then fit a psychometric curve to the data.\n",
+    "mpl.rcParams['font.family'] = ['DejaVu Serif']\n",
     "from scipy.optimize import curve_fit\n",
     "from scipy.special import erf\n",
     "def probit(x, beta, alpha):\n",
