--- a/3-reinforcement_learning/tutorial_3B_RL-solutions.ipynb
+++ b/3-reinforcement_learning/tutorial_3B_RL-solutions.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "kT1-9O8v2vgy"
@@ -285,6 +286,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1390,7 +1392,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.6"
+      "version": "3.7.4"
     },
     "toc": {
       "base_numbering": 1,
