fix bug with coherences

--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -1025,7 +1025,7 @@
     "signed_coherence = np.copy(coherence)\n",
     "signed_coherence[gt == 0] = -signed_coherence[gt == 0]\n",
     "# INSTRUCTION 10: plot the probability of choosing right as a function of the signed coherence\n",
-    "for sc in signed_coherence:\n",
+    "for sc in np.unique(signed_coherence):\n",
     "    prob_right = np.mean(choice_01[signed_coherence == sc])\n",
     "    std_right = np.std(choice_01[signed_coherence == sc])/np.sqrt(np.sum(signed_coherence == sc))\n",
     "    ax.errorbar(sc, prob_right, yerr=std_right, color='k')\n",
