--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -43,13 +43,30 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 0. Installs, packages, auxiliary functions\n",
     "\n",
-    "### 0.1. Neurogym"
+    "### 0.1. Helper functions\n",
+    "\n",
+    "We first download the helper modules from the [BAMB2024 Github repository](https://github.com/bambschool/BAMB2024). Just execute the code in the cells below and see if it populates the modules locally and ensure that there are no installation errors.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the github path and authorization token \n",
+    "RAW_GITHUB_PATH = 'https://raw.githubusercontent.com/bambschool/BAMB2023/main/4-recurrent_neural_networks/'\n",
+    "\n",
+    "# define the list of files to be downloaded\n",
+    "files = ['data.py', 'ops.py']\n",
+    "\n",
+    "for file in files:\n",
+    "    !wget -O {file} \"{RAW_GITHUB_PATH}{file}\""
    ]
   },
   {
@@ -57,6 +74,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 0.2. Neurogym\n",
+    "\n",
     "We will use the toolbox [**Neurogym**](https://github.com/neurogym/neurogym/) to define the tasks that our RNNs will have to learn. \n",
     "\n",
     "**NeuroGym** is a curated collection of neuroscience tasks with a common interface. It's main goal is to facilitate training of neural network models on neuroscience tasks."
@@ -84,42 +103,6 @@
     "<p align=\"center\">\n",
     "<img src=\"https://drive.google.com/uc?export=view&id=1Suk5bvKiFqZCmIu4f1pWNghBxrznJ0U_\" alt=\"drawing\" width=\"1000\"/>\n",
     "</p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 0.2. Helper functions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we download the helper modules from the [BAMB2024 Github repository](https://github.com/bambschool/BAMB2024). Just execute the code in the cells below and see if it populates the modules locally and ensure that there are no installation errors."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "_wnFMsN7Rgmy",
-    "outputId": "158ac108-a83a-4e35-cc13-b683443439d3"
-   },
-   "outputs": [],
-   "source": [
-    "# define the github path and authorization token \n",
-    "RAW_GITHUB_PATH = 'https://raw.githubusercontent.com/bambschool/BAMB2023/main/4-recurrent_neural_networks/'\n",
-    "\n",
-    "# define the list of files to be downloaded\n",
-    "files = ['data.py', 'ops.py']\n",
-    "\n",
-    "for file in files:\n",
-    "    !wget -O {file} \"{RAW_GITHUB_PATH}{file}\""
    ]
   },
   {
