--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -58,16 +58,16 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "ebGRanfGgUqG",
-        "outputId": "3f9373b5-5e70-47c0-89f7-1e4aee7c49df",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ebGRanfGgUqG",
+        "outputId": "3f9373b5-5e70-47c0-89f7-1e4aee7c49df"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "total 16\n",
             "-rw-r--r-- 1 root root 5511 Jul 19 10:22 data.py\n",
@@ -106,16 +106,16 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "xJTx7XvvgUqJ",
-        "outputId": "c03db240-8731-4fb6-e5c9-aa21800e6c5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xJTx7XvvgUqJ",
+        "outputId": "c03db240-8731-4fb6-e5c9-aa21800e6c5d"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: gym in /usr/local/lib/python3.10/dist-packages (0.25.2)\n",
             "Requirement already satisfied: numpy>=1.18.0 in /usr/local/lib/python3.10/dist-packages (from gym) (1.25.2)\n",
@@ -207,16 +207,16 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
-        "id": "Kof72wUxRgm0",
-        "outputId": "7147bd41-6921-4e14-b80e-584b676feb93",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Kof72wUxRgm0",
+        "outputId": "7147bd41-6921-4e14-b80e-584b676feb93"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Warning: Gym version v0.24.1 has a number of critical issues with `gym.make` such that environment observation and action spaces are incorrectly evaluated, raising incorrect errors and warning . It is recommend to downgrading to v0.23.1 or upgrading to v0.25.1\n",
             "/usr/local/lib/python3.10/dist-packages/gym/envs/registration.py:396: UserWarning: \u001b[33mWARN: The `registry.all` method is deprecated. Please use `registry.values` instead.\u001b[0m\n",
@@ -364,7 +364,7 @@
         "                            'decision': 300},\n",
         "                'sigma': 2,\n",
         "                'dim_ring': 2}\n",
-        "    wrappers_kwargs = {'probs': [0.8, 0.2])}\n",
+        "    wrappers_kwargs = {'probs': [0.8, 0.2]}\n",
         "else:\n",
         "    env_kwargs = {'dt': training_kwargs['dt']}"
       ]
