--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -249,7 +249,8 @@
         "from neurogym.utils import plotting\n",
         "\n",
         "# import\n",
-        "import data"
+        "import data\n",
+        "import ops"
       ]
     },
     {
@@ -387,30 +388,7 @@
         "id": "QhGB0XbtgUqO"
       },
       "outputs": [],
-      "source": [
-        "def get_dataset(envid, env_kwargs, wrappers_kwargs, training_kwargs):\n",
-        "    \"\"\"\n",
-        "    Create neurogym dataset and environment.\n",
-        "\n",
-        "    args:\n",
-        "        envid (str): name of the task on the neurogym library\n",
-        "        env_kwargs (dict): task parameters\n",
-        "        training_kwargs (dict): training parameters\n",
-        "\n",
-        "    returns:\n",
-        "        dataset (neurogym.Dataset): dataset object from which we can sample trials and labels\n",
-        "        env (gym.Env): task environment\n",
-        "    \"\"\"\n",
-        "\n",
-        "    # Make supervised dataset using neurogym's Dataset class\n",
-        "    dataset = data.Dataset(envid,\n",
-        "                           env_kwargs=env_kwargs, wrappers_kwargs=wrappers_kwargs,\n",
-        "                           batch_size=training_kwargs['batch_size'],\n",
-        "                           seq_len=training_kwargs['seq_len'])\n",
-        "    env = dataset.env\n",
-        "\n",
-        "    return dataset, env"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -428,7 +406,7 @@
       "outputs": [],
       "source": [
         "# call function to sample\n",
-        "dataset, env = get_dataset(envid=envid, env_kwargs=env_kwargs, wrappers_kwargs=wrappers_kwargs, training_kwargs=training_kwargs)"
+        "dataset, env = data.get_dataset(envid=envid, env_kwargs=env_kwargs, wrappers_kwargs=wrappers_kwargs, training_kwargs=training_kwargs)"
       ]
     },
     {
@@ -786,7 +764,7 @@
         "training_kwargs['net_kwargs'] = net_kwargs\n",
         "\n",
         "# Save config\n",
-        "with open(get_modelpath(envid) / 'config.json', 'w') as f:\n",
+        "with open(ops.get_modelpath(envid) / 'config.json', 'w') as f:\n",
         "    json.dump(training_kwargs, f)"
       ]
     },
@@ -866,7 +844,7 @@
         "        running_loss = 0.0\n",
         "\n",
         "        # save current state of network's parameters\n",
-        "        torch.save(net.state_dict(), get_modelpath(envid) / 'net.pth')\n",
+        "        torch.save(net.state_dict(), ops.get_modelpath(envid) / 'net.pth')\n",
         "\n",
         "print('Finished Training')"
       ]
@@ -911,7 +889,7 @@
       ],
       "source": [
         "# load configuration file - we might have run the training on the cloud and might now open the results locally\n",
-        "with open(get_modelpath(envid) / 'config.json') as f:\n",
+        "with open(ops.get_modelpath(envid) / 'config.json') as f:\n",
         "    config = json.load(f)"
       ]
     },
@@ -998,7 +976,7 @@
         "    net = net.to(device) # pass to GPU for running forwards steps\n",
         "\n",
         "    # load the trained network's weights from the saved file\n",
-        "    net.load_state_dict(torch.load(get_modelpath(envid) / 'net.pth'))\n",
+        "    net.load_state_dict(torch.load(ops.get_modelpath(envid) / 'net.pth'))\n",
         "\n",
         "    # how many trials to run\n",
         "    num_trial = 1000\n",
