--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -383,22 +383,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "id": "QhGB0XbtgUqO"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1UqicNRFgUqO"
-      },
-      "source": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": 15,
       "metadata": {
         "id": "taONJq8AgUqO"
@@ -486,19 +470,20 @@
         "actions = []\n",
         "gt = []\n",
         "perf = []\n",
+        "correct_choice = []\n",
         "trial_count = 0\n",
         "for stp in range(int(num_steps)):\n",
-        "    action = env.action_space.sample()\n",
-        "    # Yoy can also try to set the action to one constant value, e.g. action = 1\n",
+        "    action = env.action_space.sample() # sample a random action from the action space\n",
+        "    # You can also try to set the action to one constant value, e.g. action = 1\n",
         "    ob, rew, done, info = env.step(action)\n",
         "    inputs.append(ob)\n",
         "    actions.append(action)\n",
         "    gt.append(info['gt'])\n",
         "    if info['new_trial']:\n",
         "        perf.append(info['performance'])\n",
+        "        correct_choice.append(info['gt'])\n",
         "    else:\n",
         "        perf.append(0)\n",
-        "\n",
         "\n",
         "data = {'ob': np.array(inputs).astype(float),\n",
         "        'actions': actions, 'gt': gt}\n",
@@ -528,6 +513,27 @@
         "As you can see the inputs (observations) have size 3: two stimuli for the left/right choices (green and orange traces) and one fixation cue (blue trace) that indicates when the network should choose. The goal of the RNN will be to identify which of the two stimuli is larger and to choose the corresponding action.\n",
         "\n",
         "In the second panel, the target output (ground-truth) is indicated by the dashed green line and the actions in blue come from a random agent. The bottom panel show the performance of the agent (accuracy) at the end of each trial."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We now zoom out to see a longer sequence of trials."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Plot correct choice\n",
+        "f = plt.figure(figsize=(8, 4), dpi=150)\n",
+        "plt.plot(np.arange(1, len(correct_choice)+1), correct_choice, label='Correct choice')\n",
+        "plt.xlabel('Trial')\n",
+        "plt.ylabel('Correct choice')\n",
+        "plt.legend()"
       ]
     },
     {
