tune figure for simulation

--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -465,11 +465,12 @@
       "source": [
         "# INSTRUCTION 0. Play with the task (run it several times, try random and constant agents) to see how it works.\n",
         "mpl.rcParams['font.family'] = ['DejaVu Serif']\n",
-        "num_steps = 40\n",
+        "num_steps = 400\n",
         "inputs = []\n",
         "actions = []\n",
         "gt = []\n",
         "perf = []\n",
+        "reward = []\n",
         "correct_choice = []\n",
         "trial_count = 0\n",
         "for stp in range(int(num_steps)):\n",
@@ -478,6 +479,7 @@
         "    ob, rew, done, info = env.step(action)\n",
         "    inputs.append(ob)\n",
         "    actions.append(action)\n",
+        "    reward.append(rew)\n",
         "    gt.append(info['gt'])\n",
         "    if info['new_trial']:\n",
         "        perf.append(info['performance'])\n",
@@ -485,21 +487,25 @@
         "    else:\n",
         "        perf.append(0)\n",
         "\n",
-        "data = {'ob': np.array(inputs).astype(float),\n",
-        "        'actions': actions, 'gt': gt}\n",
-        "# Plot\n",
+        "inputs = np.array(inputs)\n",
+        "actions = np.array(actions)\n",
+        "gt = np.array(gt)\n",
+        "perf = np.array(perf)\n",
+        "reward = np.array(reward)   \n",
+        "# Plot first 40 steps\n",
         "f, ax = plt.subplots(ncols=1, nrows=3, figsize=(8, 4), dpi=150, sharex=True)\n",
         "\n",
-        "ax[0].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], data['ob'][:, 0], label='Fixation')\n",
-        "ax[0].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], data['ob'][:, 1], label='Stim. L.')\n",
-        "ax[0].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], data['ob'][:, 2], label='Stim. R.')\n",
+        "ax[0].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], inputs[:40, 0], label='Fixation')\n",
+        "ax[0].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], inputs[:40, 1], label='Stim. L.')\n",
+        "ax[0].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], inputs[:40, 2], label='Stim. R.')\n",
         "ax[0].set_ylabel('Inputs')\n",
         "ax[0].legend()\n",
-        "ax[1].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], data['gt'], label='Targets', color='k')\n",
-        "ax[1].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], data['actions'], label='Choice', linestyle='--')\n",
+        "ax[1].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], gt[:40], label='Targets', color='k')\n",
+        "ax[1].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], actions[:40], label='Choice', linestyle='--')\n",
         "ax[1].set_ylabel('Actions / Targets')\n",
         "ax[1].legend()\n",
-        "ax[2].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], perf, label='perf')\n",
+        "ax[2].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], perf[:40], label='Accuracy')\n",
+        "ax[2].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], reward[:40], label='reward')\n",
         "ax[2].set_ylabel('Performance')\n",
         "ax[2].set_xlabel('Time (ms)')"
       ]
